@@ -4,12 +4,19 @@ import com.example.claude_backend.application.auth.CustomOAuth2UserService;
 import com.example.claude_backend.infrastructure.security.jwt.JwtAuthenticationFilter;
 import com.example.claude_backend.infrastructure.security.oauth2.OAuth2FailureHandler;
 import com.example.claude_backend.infrastructure.security.oauth2.OAuth2SuccessHandler;
-import java.util.List;
-import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
+import com.example.claude_backend.presentation.api.v1.AuthErrorController;
+import com.example.claude_backend.presentation.api.v1.AuthSuccessController;
+import com.example.claude_backend.presentation.api.v1.FriendController;
+import com.example.claude_backend.presentation.api.v1.HomeController;
+import com.example.claude_backend.presentation.api.v1.S3Controller;
+import com.example.claude_backend.presentation.api.v1.ShopController;
+import com.example.claude_backend.presentation.api.v1.StockController;
+import com.example.claude_backend.presentation.api.v1.TestAuthController;
+import com.example.claude_backend.presentation.api.v1.TradeController;
+import com.example.claude_backend.presentation.api.v1.UserController;
+import com.example.claude_backend.presentation.api.v1.UserCustomizationController;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -20,121 +27,119 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
+import java.util.List;
+
 /**
- * Spring Security 설정 클래스
+ * Spring Security 설정
+ * OAuth2 로그인, JWT 인증, CORS 설정 등을 관리
  *
  * @author AI Assistant
  * @since 2025-01-20
  */
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity
-@RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final CustomOAuth2UserService customOAuth2UserService;
-    private final OAuth2SuccessHandler oAuth2SuccessHandler;
-    private final OAuth2FailureHandler oAuth2FailureHandler;
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+        private final JwtAuthenticationFilter jwtAuthenticationFilter;
+        private final OAuth2SuccessHandler oauth2SuccessHandler;
+        private final OAuth2FailureHandler oauth2FailureHandler;
 
-    @Value("${app.cors.allowed-origins}")
-    private String[] allowedOrigins;
+        public SecurityConfig(
+                        JwtAuthenticationFilter jwtAuthenticationFilter,
+                        OAuth2SuccessHandler oauth2SuccessHandler,
+                        OAuth2FailureHandler oauth2FailureHandler) {
+                this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+                this.oauth2SuccessHandler = oauth2SuccessHandler;
+                this.oauth2FailureHandler = oauth2FailureHandler;
+        }
 
-    @Value("${app.cors.allowed-methods}")
-    private String[] allowedMethods;
+        @Bean
+        public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+                http
+                                // CSRF 비활성화 (JWT 사용)
+                                .csrf(AbstractHttpConfigurer::disable)
 
-    @Value("${app.cors.allowed-headers}")
-    private String[] allowedHeaders;
+                                // CORS 설정
+                                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-    @Value("${app.cors.exposed-headers}")
-    private String[] exposedHeaders;
+                                // 세션 관리 (JWT 사용으로 인해 STATELESS)
+                                .sessionManagement(session -> session
+                                                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
-    @Value("${app.cors.allow-credentials}")
-    private boolean allowCredentials;
+                                // 요청별 권한 설정
+                                .authorizeHttpRequests(authz -> authz
+                                                // 공개 엔드포인트
+                                                .requestMatchers("/").permitAll()
+                                                .requestMatchers("/api/v1/home/**").permitAll()
+                                                .requestMatchers("/api/v1/stocks/**").permitAll()
+                                                .requestMatchers("/api/v1/auth/**").permitAll()
+                                                .requestMatchers("/oauth2/**").permitAll()
+                                                .requestMatchers("/login/**").permitAll()
+                                                .requestMatchers("/test/**").permitAll()
 
-    @Value("${app.cors.max-age}")
-    private long maxAge;
+                                                // OAuth2 관련 엔드포인트
+                                                .requestMatchers("/oauth2/authorization/**").permitAll()
+                                                .requestMatchers("/login/oauth2/code/**").permitAll()
 
-    /** Security Filter Chain 설정 */
-    @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
-                // CSRF 비활성화 (JWT 사용)
-                .csrf(AbstractHttpConfigurer::disable)
+                                                // Swagger 관련 엔드포인트
+                                                .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
 
-                // CORS 설정
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                                                // 정적 리소스
+                                                .requestMatchers("/static/**").permitAll()
 
-                // 세션 정책 설정 (OAuth2 로그인을 위해 IF_REQUIRED로 변경)
-                .sessionManagement(
-                        session -> session
-                                .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
-                                .maximumSessions(1)
-                                .maxSessionsPreventsLogin(false))
+                                                // 나머지 모든 요청은 인증 필요
+                                                .anyRequest().authenticated())
 
-                // 요청 인가 설정
-                .authorizeHttpRequests(
-                        auth -> auth
-                                // 공개 엔드포인트
-                                .requestMatchers(
-                                        "/",
-                                        "/error",
-                                        "/favicon.ico",
-                                        "/swagger-ui/**",
-                                        "/api-docs/**",
-                                        "/v3/api-docs/**",
-                                        "/actuator/health",
-                                        "/api/v1/public/**",
-                                        "/api/v1/test/**", // test
-                                        "/api/v1/users/search", // 임시로 사용자 검색 API 공개
-                                        "/auth/success",
-                                        "/api/v1/auth/error")
-                                .permitAll()
+                                // OAuth2 로그인 설정
+                                .oauth2Login(oauth2 -> oauth2
+                                                .successHandler(oauth2SuccessHandler)
+                                                .failureHandler(oauth2FailureHandler))
 
-                                // OAuth2 엔드포인트
-                                .requestMatchers("/oauth2/**")
-                                .permitAll()
+                                // JWT 필터 추가
+                                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
-                                // API 엔드포인트
-                                .requestMatchers("/api/v1/users/me")
-                                .authenticated()
-                                .requestMatchers("/api/v1/admin/**")
-                                .hasRole("ADMIN")
+                return http.build();
+        }
 
-                                // 나머지 모든 요청은 인증 필요
-                                .anyRequest()
-                                .authenticated())
+        /**
+         * CORS 설정
+         * 프론트엔드와의 통신을 위한 CORS 정책 설정
+         */
+        @Bean
+        public CorsConfigurationSource corsConfigurationSource() {
+                CorsConfiguration configuration = new CorsConfiguration();
 
-                // OAuth2 로그인 설정
-                .oauth2Login(
-                        oauth2 -> oauth2
-                                .authorizationEndpoint(
-                                        authorization -> authorization.baseUri("/oauth2/authorization"))
-                                .redirectionEndpoint(redirection -> redirection.baseUri("/login/oauth2/code/*"))
-                                .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
-                                .successHandler(oAuth2SuccessHandler)
-                                .failureHandler(oAuth2FailureHandler));
+                // 허용할 Origin 설정
+                configuration.setAllowedOriginPatterns(List.of("*"));
 
-        // JWT 필터 추가
-        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                // 허용할 HTTP 메서드 설정
+                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
-        return http.build();
-    }
+                // 허용할 헤더 설정
+                configuration.setAllowedHeaders(Arrays.asList(
+                                "Authorization",
+                                "Content-Type",
+                                "X-Requested-With",
+                                "Accept",
+                                "Origin",
+                                "Access-Control-Request-Method",
+                                "Access-Control-Request-Headers"));
 
-    /** CORS 설정 */
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(allowedOrigins));
-        configuration.setAllowedMethods(List.of(allowedMethods));
-        configuration.setAllowedHeaders(List.of(allowedHeaders));
-        configuration.setExposedHeaders(List.of(exposedHeaders));
-        configuration.setAllowCredentials(allowCredentials);
-        configuration.setMaxAge(maxAge);
+                // 노출할 헤더 설정
+                configuration.setExposedHeaders(Arrays.asList(
+                                "Authorization",
+                                "Content-Type"));
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+                // 인증 정보 포함 허용
+                configuration.setAllowCredentials(true);
 
-        return source;
-    }
+                // Preflight 요청 캐시 시간 (1시간)
+                configuration.setMaxAge(3600L);
+
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
+
+                return source;
+        }
 }
